mobile/stylist/src/app/services/services-list/services-list.component.scss
page-services-list {
}

.ServicesLis {
  padding: 0;
  margin-bottom: 0;
  font-size: pxtovw(16px);

  ion-label {
    margin: 0;
  }

  ion-item {
    min-height: pxtovw(48px);
  }
}

.ServicesLis-offset {
  margin-top: pxtovw(25px);
}

.ServicesLis-title {
  display: flex;
  align-items: center;
  height: pxtovw(48px);
  margin-bottom: pxtovw(17px);
  font-size: pxtovw(21px);
  font-weight: 600;
  border-bottom: 0.55px solid color($colors, color28);

  i {
    display: inline-block;
    width: pxtovw(23px);
    height: pxtovw(23px);
    margin-right: pxtovw(9px);
    vertical-align: middle;
  }
}

.ServicesLis-item {
  margin: 0 0 pxtovw(29px);

  .item-block .item-inner {
    padding: 0;
  }
}

.ServicesLis-row {
  padding: pxtovw(25px) 0;
  font-size: pxtovw(14px);
}

.ServicesLis-head {
  font-size: pxtovw(13px);
  color: color($shared-colors, color1);
}

.ServicesLis-rowCol {
  display: flex;
  align-items: center;
  white-space: normal;

  &:last-child {
    display: flex;
    justify-content: space-between;
    padding-right: pxtovw(7px);

    i {
      font-size: pxtovw(18px);
      color: color($shared-colors, color1);
    }
  }
}

.ServicesLis-rowColDel {
  height: auto;
  padding: pxtovw(13px) pxtovw(16px);
  margin: 0;
  font-size: pxtovw(18px);
  color: color($shared-colors, color1);
  border-radius: 4px;
}

.ServicesLis-swipe {
  font-size: pxtovw(14px);
  text-transform: capitalize;
}

.ServicesGap {
  padding: pxtovw(30px) pxtovw(20px) pxtovw(6px);
  margin: pxtovw(56px) 0 pxtovw(78px);
  text-align: center;
  background: color($colors, white);
  border-radius: pxtovw(16px);
  box-shadow: 0 7px 43px 0 rgba(0, 0, 0, 0.08);
}

.ServicesGap-icon {
  display: inline-block;
  margin-bottom: pxtovw(14px);
  font-size: pxtovw(51px);
}

.ServicesGap-title {
  margin: 0 0 pxtovw(3px);
  font-size: pxtovw(19px);
  font-weight: 500;
  line-height: pxtovw(22px);
}

